# engine

./: .clangd  .gitignore  .gitmodules  .ignore  CMakeLists.txt  Makefile  README.md  ideas.md  imgui.ini  papers.md  todo.md
assets/: bunny.mtl  cornell.mtl
shaders/: bsdf.slang  closesthit.slang  constants.slang  miss.slang  rand.slang  raygen.slang  shadow_miss.slang  tonemap.slang  types.slang  utils.slang
src/: camera.h  config.h  context.cpp  context.h  dds.cpp  dds.h  headless.cpp  ini.cpp  ini.h  main.cpp  rt_pipeline.cpp  rt_pipeline.h  scene.cpp  scene.h  shared_types.h  stb_impl.cpp  swapchain.cpp  swapchain.h  utils.cpp  utils.h
